--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
   
@@ -55,30 +56,41 @@
 				    </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+        </configuration>
+    </plugin>
        <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.8</version>
+					<executions>
+							<execution>
+									<id>copy-dependencies</id>
+									<phase>package</phase>
+									<goals>
+										  <goal>copy-dependencies</goal>
+									</goals>
+									<configuration>
+										  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+										  <overWriteReleases>false</overWriteReleases>
+										  <overWriteSnapshots>false</overWriteSnapshots>
+										  <overWriteIfNewer>true</overWriteIfNewer>
+									</configuration>
+							</execution>
+					</executions>
+				</plugin>
             <!-- Specify the resources which need to be made accessible to the user-->              
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
+                <configuration>
+                 <includeEmptyDirs>true</includeEmptyDirs>
+                </configuration>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
