--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,18 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<!--Use filtering so that maven will replace placeholders with values from the pom e.g. ${project.version} -->
-				<filtering>true</filtering>
+				<filtering>false</filtering>
 			</resource>
-		</resources> 
+		</resources>
 		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+		  </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
