--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.utgenome.thirdparty</groupId>
-			<artifactId>picard</artifactId>
-			<version>1.102.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>20040117.000000</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.1</version>
@@ -29,6 +19,16 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.broadinstitute</groupId>
+			<artifactId>picard</artifactId>
+			<version>1.130</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
 		</dependency>
 	</dependencies>
 
