--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,19 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.broadinstitute</groupId>
-			<artifactId>picard</artifactId>
-			<version>1.130</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.samtools</groupId>
+			<artifactId>htsjdk</artifactId>
+			<version>1.131</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.broadinstitute</groupId>
+			<artifactId>picard</artifactId>
+			<version>1.131</version>
 		</dependency>
 	</dependencies>
 
